--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" href="../images/logo.png">
+    <link rel="icon" href="images/logo.png">
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,8 +13,8 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <title>@salman-hossain.com</title>
   </head>
@@ -113,7 +113,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
-                  src="../images/caersoule1.jpg"
+                  src="images/caersoule1.jpg"
                   class="d-block w-100"
                   alt="..."
                 />
@@ -126,7 +126,7 @@
               </div>
               <div class="carousel-item">
                 <img
-                  src="../images/carsoule2.jpg"
+                  src="images/carsoule2.jpg"
                   class="d-block w-100"
                   alt="..."
                 />
@@ -140,7 +140,7 @@
               </div>
               <div class="carousel-item">
                 <img
-                  src="../images/carsoule3.jpg"
+                  src="images/carsoule3.jpg"
                   class="d-block w-100"
                   alt="..."
                 />
